kubernetes.yaml
#configmap

apiVersion: v1
kind: ConfigMap
metadata:
  name: config
data:
  init.sql: |
    CREATE DATABASE IF NOT EXISTS `geekprofile` DEFAULT CHARACTER SET utf8 COLLATE utf8_general_ci;
    USE `geekprofile`;
    CREATE TABLE IF NOT EXISTS `accounts` (
      `id` int(11) NOT NULL AUTO_INCREMENT,
      `username` varchar(50) NOT NULL,
      `password` varchar(255) NOT NULL,
      `email` varchar(100) NOT NULL,
      `organisation` varchar(100) NOT NULL,
      `address` varchar(100) NOT NULL,
      `city` varchar(100) NOT NULL,
      `state` varchar(100) NOT NULL,
      `country` varchar(100) NOT NULL,
      `postalcode` varchar(100) NOT NULL,
      PRIMARY KEY (`id`)
    ) ENGINE=InnoDB AUTO_INCREMENT=1 DEFAULT CHARSET=utf8;
  MYSQL_HOST: "mysql"
  MYSQL_USER: "root"
  MYSQL_PASSWORD: "password"
  
  ---
  
  #geeks-profile
  
  apiVersion: apps/v1
kind: Deployment
metadata:
  name: geeks-profile
  labels:
    app: geeks-profile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geeks-profile
  template:
    metadata:
      labels:
        app: geeks-profile
    spec:
      containers:
        - name: geeks-profile
          image: waheeb96/geeks-profile
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: geeks-profile-service
spec:
  type: ClusterIP
  selector:
    app: geeks-profile
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---

#ingress

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: geeks-profile-service
                port:
                  number: 8080
                  
 ---
 
 #mysql
 
 apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: mysql:5.7
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-init
              mountPath: /docker-entrypoint-initdb.d
            - name: mysql-pvc
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-init
          configMap:
            name: config
        - name: mysql-pvc
          persistentVolumeClaim:
            claimName: mysql-pvc
---

apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ClusterIP
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
      
  ---
  
  #pvc
  
  apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: mysql:5.7
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-init
              mountPath: /docker-entrypoint-initdb.d
            - name: mysql-pvc
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-init
          configMap:
            name: config
        - name: mysql-pvc
          persistentVolumeClaim:
            claimName: mysql-pvc
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ClusterIP
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
